[build-system]
requires = ["setuptools>=80.9.0", "wheel==0.45.1", "setuptools_scm==8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "prenatalppkt"
description = "Prenatal phenopacket library"
authors = [{ name = "Varenya Jain, Peter Robinson" }]
requires-python = ">=3.10"
# dynamic = ["dependencies", "version"]
dynamic = ["version"]
license = { file = "LICENSE" }
readme = "README.md"

# inherited from requirements/requirements.txt and requirements/requirements_test.txt
dependencies = [
 "click==8.2.1",
 "docling==2.54.0",
 #"hpo-toolkit==0.7.0",
 "hpo-toolkit==0.5.5",
 "ijson==3.4.0",
 "jsonschema==4.25.1",
 "openpyxl==3.1.5",
 "orjson==3.11.3",
 "pandas==2.3.2",
 "phenopackets==2.0.2.post4",
 "protobuf==3.20.3",
 "pydantic==2.11.9",
 "pyphetools==0.9.118",
 "python-calamine==0.5.3",
 "PyYAML==6.0.2",
 "requests==2.32.4",
 "rich==14.1.0",
 "stairval==0.2.1",
 #"typer==0.17.4",
 "mkdocs-gen-files==0.5.0",
 "FastHPOCR"="0.1.4",
]

[project.optional-dependencies]
test = [
 "pytest==8.4.0",
 "ruff==0.12.4",
]
docs = [
    'mkdocs-material[imaging]>=9.5.10,<10',
    'mkdocs-material-extensions>=1.3,<2.0',
    'mkdocstrings[python]>=0.22,<1.0',
    'pillow',
    'cairosvg',
]

[project.urls]
homepage = "https://github.com/P2GX/prenatalppkt/"
repository = "https://github.com/P2GX/prenatalppkt/.git"
documentation = "https://github.com/P2GX/prenatalppkt/"
bugtracker = "https://github.com/P2GX/prenatalppkt/issues"

[project.scripts]
prenatalppkt = "prenatalppkt.cli:main"

[tool.setuptools.dynamic.optional-dependencies]
test = {file = ["requirements/requirements_test.txt"]}

[tool.setuptools]
packages.find = { where = ["src"] }

[tool.setuptools_scm]
version_file = "src/prenatalppkt/_version.py"

[tool.setuptools.dynamic]
version = { attr = "prenatalppkt._version.version" }
# dependencies = {file = ["requirements/requirements.txt"]}